<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:onClick="clickSeven"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:onClick="clickEight"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:onClick="clickNine"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:onClick="clickPlus"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:onClick="clickFour"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:onClick="clickFive"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:onClick="clickSix"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:onClick="clickMinus"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:onClick="clickOne"
            android:textSize="50sp"
            app:backgroundTint="#000000"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:onClick="clickTwo"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:onClick="clickThree"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:onClick="clickMultiply"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="157dp">

        <Button
            android:id="@+id/decimal"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:onClick="clickDecimal"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clickZero"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:backgroundTint="#000000" />

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clickEqual"
            android:text="@string/equal"
            android:textSize="50sp"
            app:backgroundTint="#FF9800" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/divide"
            android:onClick="clickDivide"
            android:textSize="50sp"
            app:backgroundTint="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="157dp">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:hint="0"
            android:text="@string/main"
            app:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="clickClear"
        android:text="@string/clear"
        android:textSize="50sp"
        app:backgroundTint="#951F1F"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="clickBackspace"
        android:text="@string/backspace"
        android:textSize="50sp"
        app:backgroundTint="#951F1F"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>